RESOLVED FIXED304945
`border-*-width`, `outline-width` and `column-rule-width` don't pixel snap during CSS animations
https://bugs.webkit.org/show_bug.cgi?id=304945
Summary `border-*-width`, `outline-width` and `column-rule-width` don't pixel snap du...
Sam Weinig
Reported 2026-01-05 10:57:43 PST
`border-*-width`, `outline-width` and `column-rule-width` don't pixel during CSS animations and they probably should. The specs (https://drafts.csswg.org/css-borders-4/#border-width for instance) say they animates "by computed value" and the computed value should be the "absolute length, snapped as a border width", so it seems like each step should snap.
Attachments
Sam Weinig
Comment 1 2026-01-07 09:43:05 PST
EWS
Comment 2 2026-01-08 05:53:07 PST
Committed 305272@main (18f57e99c9fe): <https://commits.webkit.org/305272@main> Reviewed commits have been landed. Closing PR #56202 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-08 05:54:13 PST
Note You need to log in before you can comment on or make changes to this bug.