`border-*-width`, `outline-width` and `column-rule-width` don't pixel snap during CSS animations https://bugs.webkit.org/show_bug.cgi?id=304945

Reviewed by Darin Adler.

Overload interpolation for `Style::LineWidth` to apply pixel snapping
during animations. Refactors pixel snapping code into a helper and added
spec link and documentation.

* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/animations/border-width-interpolation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-multicol/animation/column-rule-width-interpolation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/animation/outline-width-interpolation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/animation/outline-width-interpolation.html:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/css/css-multicol/animation/column-rule-width-interpolation-expected.txt: Removed.
* Source/WebCore/style/values/backgrounds/StyleLineWidth.cpp:
* Source/WebCore/style/values/backgrounds/StyleLineWidth.h:

Canonical link: https://commits.webkit.org/305272@main