Source/WebCore/style/values/backgrounds/StyleLineWidth.cpp
@@ -27,8 +27,12 @@
 #include "StyleLineWidth.h"
 
 #include "CSSPrimitiveValue.h"
+#include "Document.h"
 #include "RenderStyle+GettersInlines.h"
 #include "StyleBuilderChecking.h"
+#include "StyleInterpolationClient.h"
+#include "StyleInterpolationContext.h"
+#include "StylePrimitiveNumericTypes+Blending.h"
 #include "StylePrimitiveNumericTypes+CSSValueConversion.h"
 #include "StylePrimitiveNumericTypes+Evaluation.h"
 #include "StylePrimitiveNumericTypes+Serialization.h"
@@ -60,6 +64,24 @@ static auto handleKeywordValue(BuilderState& state, CSSValueID valueID) -> LineW
     return LineWidth::Length { floorToDevicePixel(keywordValue * state.style().usedZoom(), state.document().deviceScaleFactor()) };
 }
 
+static LineWidth::Length snapLengthAsBorderWidth(float length, float deviceScaleFactor)
+{
+    // https://drafts.csswg.org/css-values-4/#snap-a-length-as-a-border-width
+
+    // 1. Assert: `length` is non-negative.
+    // NOTE: Not asserted, but checked in step 3.
+
+    // 2. If `length` is an integer number of device pixels, do nothing.
+    // NOTE: Handled by step 4 without explicitly checking here.
+
+    // 3. If `length` is greater than zero, but less than 1 device pixel, round `length` up to 1 device pixel.
+    if (auto singleDevicePixelLength = 1.0f / deviceScaleFactor; length > 0.0f && length < singleDevicePixelLength)
+        return LineWidth::Length { singleDevicePixelLength };
+
+    // 4. If `length` is greater than 1 device pixel, round it down to the nearest integer number of device pixels.
+    return LineWidth::Length { floorToDevicePixel(length, deviceScaleFactor) };
+}
+
 auto CSSValueConversion<LineWidth>::operator()(BuilderState& state, const CSSValue& value) -> LineWidth
 {
     RefPtr primitiveValue = requiredDowncast<CSSPrimitiveValue>(state, value);
@@ -78,10 +100,17 @@ auto CSSValueConversion<LineWidth>::operator()(BuilderState& state, const CSSVal
             return LineWidth::Length { 1.0f };
     }
 
-    if (auto minimumLineWidth = 1.0f / state.document().deviceScaleFactor(); result > 0.0f && result < minimumLineWidth)
-        return LineWidth::Length { minimumLineWidth };
+    return snapLengthAsBorderWidth(result, state.document().deviceScaleFactor());
+}
 
-    return LineWidth::Length { floorToDevicePixel(result, state.document().deviceScaleFactor()) };
+// MARK: - Blending
+
+auto Blending<LineWidth>::blend(const LineWidth& a, const LineWidth& b, const RenderStyle& aStyle, const RenderStyle& bStyle, const Interpolation::Context& context) -> LineWidth
+{
+    auto blendedValue = Style::blend(a.value, b.value, aStyle, bStyle, context);
+    if (RefPtr document = context.client.document())
+        return snapLengthAsBorderWidth(blendedValue.unresolvedValue(), document->deviceScaleFactor());
+    return blendedValue;
 }
 
 // MARK: - Evaluate
